Add Fawry Facade

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,10 @@
         "laravel": {
             "providers": [
                 "Maherelgamil\\LaravelFawry\\FawryServiceProvider"
-            ]
+            ],
+            "aliases": {
+                "Fawry": "Maherelgamil\\LaravelFawry\\Facades\\FawryFacade"
+            }
         }
     }
 }
